--- a/index.html
+++ b/index.html
@@ -9,7 +9,42 @@
 </head>
 <body>
 
-    <h1>Test</h1>
+    <header>
+        <ul class="nav-list-1">
+            <a href="#"><li>Stvar 1</li></a>
+            <a href="#"><li>Stvar 2</li></a>
+        </ul>
+
+        <a href="#" class="nav-title">
+            <h1>Nesto</h1>
+        </a>
+
+        <ul class="nav-list-2">
+            <a href="#"><li>Stvar 3</li></a>
+            <a href="#"><li>Stvar 4</li></a>
+        </ul>
+    </header>
+    <br><br><br>
+    <header>
+
+        <a href="#" class="nav-title">
+            <h1>Nesto</h1>
+        </a>
+        <ul class="nav-list-1">
+            <a href="#"><li>Stvar 1</li></a>
+            <a href="#"><li>Stvar 2</li></a>
+        </ul>
+
+        <ul class="nav-list-2">
+            <a href="#"><li>Stvar 3</li></a>
+            <a href="#"><li>Stvar 4</li></a>
+        </ul>
+    </header>
+
+    <main>
+        
+    </main>
+
     
 </body>
 </html>
